--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <script src="word-guessing-game.js"></script>
+    <script src="solution-2.js"></script>
   </head>
   <body></body>
 </html>
